--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -192,10 +192,61 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802091912158_InitialModel.cs" />
+    <Compile Include="Migrations\201802091912158_InitialModel.Designer.cs">
+      <DependentUpon>201802091912158_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802091922365_AddSubscribedToCustomers.cs" />
+    <Compile Include="Migrations\201802091922365_AddSubscribedToCustomers.Designer.cs">
+      <DependentUpon>201802091922365_AddSubscribedToCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802091928121_AddMembershipType.cs" />
+    <Compile Include="Migrations\201802091928121_AddMembershipType.Designer.cs">
+      <DependentUpon>201802091928121_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802091931520_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201802091931520_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201802091931520_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802091942076_ApplyAnnotationToCustomers.cs" />
+    <Compile Include="Migrations\201802091942076_ApplyAnnotationToCustomers.Designer.cs">
+      <DependentUpon>201802091942076_ApplyAnnotationToCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092011213_AddNameInMembershipType.cs" />
+    <Compile Include="Migrations\201802092011213_AddNameInMembershipType.Designer.cs">
+      <DependentUpon>201802092011213_AddNameInMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092013076_PopulateNameInMembershipType.cs" />
+    <Compile Include="Migrations\201802092013076_PopulateNameInMembershipType.Designer.cs">
+      <DependentUpon>201802092013076_PopulateNameInMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092020452_AddBirthDayToCustomers.cs" />
+    <Compile Include="Migrations\201802092020452_AddBirthDayToCustomers.Designer.cs">
+      <DependentUpon>201802092020452_AddBirthDayToCustomers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092056290_AddMovies.cs" />
+    <Compile Include="Migrations\201802092056290_AddMovies.Designer.cs">
+      <DependentUpon>201802092056290_AddMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092058362_UpdateMovies.cs" />
+    <Compile Include="Migrations\201802092058362_UpdateMovies.Designer.cs">
+      <DependentUpon>201802092058362_UpdateMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092100033_PopulateGenre.cs" />
+    <Compile Include="Migrations\201802092100033_PopulateGenre.Designer.cs">
+      <DependentUpon>201802092100033_PopulateGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802092112221_ErrorInNameOfPropiertiesInMovies.cs" />
+    <Compile Include="Migrations\201802092112221_ErrorInNameOfPropiertiesInMovies.Designer.cs">
+      <DependentUpon>201802092112221_ErrorInNameOfPropiertiesInMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -302,6 +353,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
+    <Content Include="Views\Customers\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -316,6 +368,44 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201802091912158_InitialModel.resx">
+      <DependentUpon>201802091912158_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802091922365_AddSubscribedToCustomers.resx">
+      <DependentUpon>201802091922365_AddSubscribedToCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802091928121_AddMembershipType.resx">
+      <DependentUpon>201802091928121_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802091931520_PopulateMembershipTypes.resx">
+      <DependentUpon>201802091931520_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802091942076_ApplyAnnotationToCustomers.resx">
+      <DependentUpon>201802091942076_ApplyAnnotationToCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092011213_AddNameInMembershipType.resx">
+      <DependentUpon>201802092011213_AddNameInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092013076_PopulateNameInMembershipType.resx">
+      <DependentUpon>201802092013076_PopulateNameInMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092020452_AddBirthDayToCustomers.resx">
+      <DependentUpon>201802092020452_AddBirthDayToCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092056290_AddMovies.resx">
+      <DependentUpon>201802092056290_AddMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092058362_UpdateMovies.resx">
+      <DependentUpon>201802092058362_UpdateMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092100033_PopulateGenre.resx">
+      <DependentUpon>201802092100033_PopulateGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802092112221_ErrorInNameOfPropiertiesInMovies.resx">
+      <DependentUpon>201802092112221_ErrorInNameOfPropiertiesInMovies.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
